changes to building a dist

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = kolona
-version = 0.1.0
+version = 0.1.3
 description = A minimalistic in-memory async Python Task queue
-long_description = file: README.md, LICENSE
+long_description = file: README.md
+long_description_content_type = text/markdown
 keywords = queue, task queue, memory
 license = MIT
 license_files = LICENSE
@@ -14,16 +15,22 @@ maintainer = roks0n
 
 [options]
 include_package_data = True
-package_dir=
-    =src
-packages=find:
+packages = kolona
 python_requires = >=3.8
 
 [options.packages.find]
-where = src
+where = kolona
 include = pkg*
 exclude =
     tests*
+
+[build-system]
+requires = ["setuptools >= 40.9.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools_scm]
+# See configuration details in https://github.com/pypa/setuptools_scm
+version_scheme = "no-guess-dev"
 
 [flake8]
 max-line-length = 100
