--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,30 @@ attrs==21.4.0
     # via pytest
 black==22.3.0
     # via -r requirements.in
+bleach==5.0.0
+    # via readme-renderer
+build==0.7.0
+    # via -r requirements.in
+certifi==2021.10.8
+    # via requests
+cffi==1.15.0
+    # via cryptography
+charset-normalizer==2.0.12
+    # via requests
 click==8.1.3
     # via
     #   black
     #   pip-tools
+commonmark==0.9.1
+    # via rich
 coverage[toml]==6.3.2
     # via pytest-cov
+cryptography==37.0.2
+    # via secretstorage
 docopt==0.6.1
     # via mypi
+docutils==0.18.1
+    # via readme-renderer
 flake8==4.0.1
     # via
     #   -r requirements.in
@@ -33,14 +49,26 @@ gitdb==4.0.9
     # via gitpython
 gitpython==0.3.2.RC1
     # via mypi
+idna==3.3
+    # via requests
+importlib-metadata==4.11.3
+    # via
+    #   keyring
+    #   twine
 iniconfig==1.1.1
     # via pytest
 isort==5.10.1
     # via -r requirements.in
 itsdangerous==2.1.2
     # via flask
+jeepney==0.8.0
+    # via
+    #   keyring
+    #   secretstorage
 jinja2==3.1.2
     # via flask
+keyring==23.5.0
+    # via twine
 markupsafe==2.1.1
     # via jinja2
 mccabe==0.6.1
@@ -50,13 +78,19 @@ mypi==0.0.3
 mypy-extensions==0.4.3
     # via black
 packaging==21.3
-    # via pytest
+    # via
+    #   build
+    #   pytest
 pathspec==0.9.0
     # via black
 pep517==0.12.0
-    # via pip-tools
+    # via
+    #   build
+    #   pip-tools
 pip-tools==6.6.0
     # via -r requirements.in
+pkginfo==1.8.2
+    # via twine
 platformdirs==2.5.2
     # via black
 pluggy==1.0.0
@@ -68,8 +102,14 @@ pycodestyle==2.8.0
     #   flake8
     #   flake8-import-order
     #   flake8-print
+pycparser==2.21
+    # via cffi
 pyflakes==2.4.0
     # via flake8
+pygments==2.12.0
+    # via
+    #   readme-renderer
+    #   rich
 pyparsing==3.0.8
     # via packaging
 pytest==7.1.2
@@ -78,22 +118,51 @@ pytest==7.1.2
     #   pytest-cov
 pytest-cov==3.0.0
     # via -r requirements.in
+readme-renderer==35.0
+    # via twine
+requests==2.27.1
+    # via
+    #   requests-toolbelt
+    #   twine
+requests-toolbelt==0.9.1
+    # via twine
+rfc3986==2.0.0
+    # via twine
+rich==12.4.0
+    # via twine
+secretstorage==3.3.2
+    # via keyring
 semantic-version==2.3.0
     # via mypi
+six==1.16.0
+    # via bleach
 smmap==5.0.0
     # via gitdb
 tomli==2.0.1
     # via
     #   black
+    #   build
     #   coverage
     #   pep517
     #   pytest
+twine==4.0.0
+    # via -r requirements.in
 typing-extensions==4.2.0
-    # via black
+    # via
+    #   black
+    #   rich
+urllib3==1.26.9
+    # via
+    #   requests
+    #   twine
+webencodings==0.5.1
+    # via bleach
 werkzeug==2.1.2
     # via flask
 wheel==0.37.1
     # via pip-tools
+zipp==3.8.0
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
