feat: ability to call tasks directly w/o enqueue-ing them

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = kolona
-version = 0.2.0
+version = 0.2.1
 description = A minimalistic in-memory async Python Task queue
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -35,7 +35,8 @@ version_scheme = "no-guess-dev"
 [flake8]
 max-line-length = 100
 select = E,W,F,I,C
-ignore = W503,E501,E203  # W503 is not PEP8 compliant and black doesnt always break lines well
+# W503 is not PEP8 compliant and black doesnt always break lines well
+ignore = W503,E501,E203
 application-import-names = kolona, tests
 
 [isort]
